--- a/File Sync/pom.xml
+++ b/File Sync/pom.xml
@@ -73,6 +73,11 @@
 
     </dependencies>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
 
 
 </project>
